--- a/app/assets/stylesheets/components/_right_panel.scss
+++ b/app/assets/stylesheets/components/_right_panel.scss
@@ -21,6 +21,7 @@
 
 .last-article {
   .trix-content {
+    height: 94px;
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 4;
